--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.nar
 *.ear
@@ -27,3 +27,4 @@ replay_pid*
 .idea/*
 *.iml
 *.xml
+out/artifacts/Pubble_s_Pixel_Playground_jar/Pubble's Pixel Playground.jar
