--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ hs_err_pid*
 replay_pid*
 
 # Other
-.idea/*
+/.idea
 *.iml
 *.xml
-out/artifacts/Pubble_s_Pixel_Playground_jar/Pubble's Pixel Playground.jar
+/out
